--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US" ng-app = "">
 <head>
-    <title></title>
+    <script src="lib/angular.js"></script>
 </head>
+
+
+
 <body>
-     <H1>Praise the Lord!!</H1>
+<h1 ng-if="true">Sample Application</h1>
+
+<div >
+    <p>Enter your Name: <input type = "text" ng-model = "name"></p>
+    <p>Hello <src ng-bind = "name"></src>!</p>
+</div>
+
+<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+
+
 </body>
 </html>
